feat: add parallelGC description with xmx1g, xms1g